# lamb2numb

./: README.md  generate_data.py  pyproject.toml
.github/workflows/: cipipeline.yaml  layerpipeline.yaml
lamb2numb/: __init__.py  hello.py  lambda_handler.py  loaders.py
src/: lambda_handler.py
tests/: pyproject.toml  test_handler.py
