[tool.poetry]
name = "lamb2numb"
version = "0.1.0"
description = ""
authors = ["sansmoraxz <souyamadebnath@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.135"
botocore = "^1.29.135"
jupyter = "^1.0.0"
boto3-stubs = {version = "^1.26.135", extras = ["s3", "sqs"]}
moto = {extras = ["s3"], version = "^4.1.9"}
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
